# hatch_rest_api

./: .devcontainer.json  .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependabotautomerge.yaml  lint.yaml  lint.yml  release.yml
src/hatch_rest_api/: __init__.py  aws_http.py  callbacks.py  const.py  contentful.py  errors.py  hatch.py  rest_baby.py  rest_iot.py  rest_mini.py  rest_plus.py  restore_iot.py  restore_v4.py  restore_v5.py  restoreiot.py  riot.py  scheduled_routine.py  shadow_client_subscriber.py  stub.py  types.py  util.py  util_bootstrap.py  util_http.py
tests/: test_restore_v5.py  test_scheduled_routine.py
