[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "aiohttp>=3.8.1",
    "awsiotsdk>=1.16.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "hatch_rest_api"
version = "1.20.5"
authors = [
  { name="Brendan Dahl", email="dahl.brendan@gmail.com" },
]
description = "Hatch Rest mini Api Wrapper"
readme = "README.md"
requires-python = ">=3.10, <4"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
]
keywords = [
    "hatch",
    "rest-mini",
    "api"
]
dependencies = [
    "xmltodict",
    "requests-oauthlib",
    "requests",
    "python-dateutil"
]

[project.urls]
"Homepage" = "https://github.com/dahlb/hatch_rest_api"
"Bug Tracker" = "https://github.com/dahlb/hatch_rest_api/issues"